# Decision-Tree-Analysis-for-Financial-Risk-Assessment-

./: .gitignore  CMakeLists.txt  README.md
docs/: api_documentation.md  user_guide.md
src/data_processing/: data_loader.cpp  data_loader.hpp
src/dynamic_programming/: dp_optimizer.cpp  dp_optimizer.hpp
src/machine_learning/: market_predictor.cpp  market_predictor.hpp
src/tree_diff/: node.cpp  node.hpp  tree_diff_algorithm.cpp  tree_diff_algorithm.hpp
src/utils/: config_manager.cpp  config_manager.hpp  logger.cpp  logger.hpp
src/visualization/: tree_visualizer.cpp  tree_visualizer.hpp
tests/: test_data_processing.cpp  test_dp_optimizer.cpp  test_market_predictor.cpp  test_tree_diff.cpp
